--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <title>Tea Cozy</title>
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
+
   <body>
+    <!-- Header -->
+    <header>
+      <div class="menu">
+        <img src="./resources/images/img-tea-cozy-logo.png">
+        <div class="menubuttons">
+          <nav>
+            <span><a href="#mission">Mission</a></span>
+            <span><a href="#featured_tea">Featured Tea</a></span>
+            <span><a href="#locations">Locations</a></span>
+          </nav>
+        </div>
+      </div>
+
 
   </body>
 </html>
