completed the our mission part

--- a/index.html
+++ b/index.html
@@ -7,19 +7,42 @@
   </head>
 
   <body>
+
     <!-- Header -->
     <header>
       <div class="menu">
         <img src="./resources/images/img-tea-cozy-logo.png">
         <div class="menubuttons">
           <nav>
-            <span><a href="#mission">Mission</a></span>
+            <span><a href="#mission_id">Mission</a></span>
             <span><a href="#featured_tea">Featured Tea</a></span>
             <span><a href="#locations">Locations</a></span>
           </nav>
         </div>
       </div>
+    </header>
 
+
+    <!-- Content -->
+    <div class="content">
+
+    <!-- Our Mission -->
+      <div class="mission" id="mission_id">
+        <div class="mission_text">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+
+
+
+
+
+
+
+
+    </div>
+
+    <!-- Footer -->
 
   </body>
 </html>
