first two contents are ready

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="menubuttons">
           <nav>
             <span><a href="#mission_id">Mission</a></span>
-            <span><a href="#featured_tea">Featured Tea</a></span>
+            <span><a href="#featured_tea_id">Featured Tea</a></span>
             <span><a href="#locations">Locations</a></span>
           </nav>
         </div>
@@ -32,6 +32,31 @@
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
+      </div>
+
+    <!-- Tea of the Month ### problem with line spacing ####-->
+      <h2 id="featured_tea_id">Featured Tea</h2>
+      <h4>What's Stepping at the Tea Cozy</h4>
+
+      <div class="featured_tea" class="spaced_around">
+        <img src="./resources/images/img-berryblitz.jpg">
+        <img src="./resources/images/img-spiced-rum.jpg">
+        <img src="./resources/images/img-donut.jpg">
+      </div>
+      <div class="featured_tea_description">
+        <span>Fall Berry Blitz Tea</span>
+        <span>Spiced Rum Tea</span>
+        <span>Seasonal Donuts</span>
+      </div>
+
+
+      <!-- need edits to the central justify-content -->
+      <div class="featured_tea_second">
+        <img src="./resources/images/img-donut.jpg">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
+      </div>
+
+
 
 
 
