finished the featured tea section

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     <!-- Tea of the Month ### problem with line spacing ####-->
       <h2 id="featured_tea_id">Featured Tea</h2>
       <h4>What's Stepping at the Tea Cozy</h4>
-
-      <div class="featured_tea" class="spaced_around">
+      <div class="featured_tea">
         <img src="./resources/images/img-berryblitz.jpg">
         <img src="./resources/images/img-spiced-rum.jpg">
         <img src="./resources/images/img-donut.jpg">
@@ -48,13 +47,16 @@
         <span>Spiced Rum Tea</span>
         <span>Seasonal Donuts</span>
       </div>
-
-
-      <!-- need edits to the central justify-content -->
-      <div class="featured_tea_second">
+      <div class="featured_tea2">
         <img src="./resources/images/img-donut.jpg">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
       </div>
+      <div class="featured_tea_description2">
+        <span>Myrtle Ave Tea</span>
+        <span>Bedford Bizzare Tea</span>
+      </div>
+
+
 
 
 
