--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <nav>
             <span><a href="#mission_id">Mission</a></span>
             <span><a href="#featured_tea_id">Featured Tea</a></span>
-            <span><a href="#locations">Locations</a></span>
+            <span><a href="#locations_id">Locations</a></span>
           </nav>
         </div>
       </div>
@@ -57,6 +57,30 @@
       </div>
 
 
+    <!-- LOCATIONS -->
+      <div class="locations" id="locations_id">
+        <h2>Locations</h2>
+        <div class="cities">
+          <div class="city">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+            <div class="city">
+              <h3>East Bayside</h3>
+              <p>3433 Phisherman's Avenue</p>
+              <p>(Northwest Corner)</p>
+              <p>Portland, Maine</p>
+            </div>
+            <div class="city">
+              <h3>Oakdale</h3>
+              <p>515 Crescent Avenue</p>
+              <p>Second Floor</p>
+              <p>Portland, Maine</p>
+            </div>
+          </div>
+        </div>
 
 
 
@@ -64,12 +88,21 @@
 
 
 
+        </div>
 
-
+      </div>
 
     </div>
 
-    <!-- Footer -->
+    <!-- Footer
+
+    <footer>
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <p>917-555-8904</p>
+    </footer>
+
+  -->
 
   </body>
 </html>
