--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
 
 
-    <!-- LOCATIONS -->
+    <!-- LOCATIONS -->  <!-- ##  non è posizionato bene il locations, dovrebbe essere 15px sopra i box delle città -->
       <div class="locations" id="locations_id">
         <h2>Locations</h2>
         <div class="cities">
@@ -67,26 +67,33 @@
             <p>Suite 108</p>
             <p>Portland, Maine</p>
           </div>
-            <div class="city">
-              <h3>East Bayside</h3>
-              <p>3433 Phisherman's Avenue</p>
-              <p>(Northwest Corner)</p>
-              <p>Portland, Maine</p>
-            </div>
-            <div class="city">
-              <h3>Oakdale</h3>
-              <p>515 Crescent Avenue</p>
-              <p>Second Floor</p>
-              <p>Portland, Maine</p>
-            </div>
+          <div class="city">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="city">
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
           </div>
         </div>
+      </div>
+
+      <!-- Contacts -->
+
+      <div class="contacts">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <p>917-555-8904</p>
+      </div>
 
 
 
 
-
-
+<!-- Closing the content div -->
 
         </div>
 
@@ -97,9 +104,7 @@
     <!-- Footer
 
     <footer>
-      <h2>The Tea Cozy</h2>
-      <h5>contact@theteacozy.com</h5>
-      <p>917-555-8904</p>
+
     </footer>
 
   -->
