all website is created, but needs some fix

--- a/index.html
+++ b/index.html
@@ -90,24 +90,16 @@
         <p>917-555-8904</p>
       </div>
 
-
-
-
-<!-- Closing the content div -->
-
-        </div>
-
-      </div>
+      <!-- Closing the content div -->
 
     </div>
 
-    <!-- Footer
+    <!-- Footer -->
 
     <footer>
-
+      <p>copyright The Tea Cozy 2017</p>
     </footer>
 
-  -->
 
   </body>
 </html>
