--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </div>
       </div>
 
-    <!-- Tea of the Month ### problem with line spacing ####-->
-      <h2 id="featured_tea_id">Featured Tea</h2>
+    <!-- Tea of the Month -->
+      <h2 id="featured_tea_id">Tea of the Month</h2>
       <h4>What's Stepping at the Tea Cozy</h4>
       <div class="featured_tea">
         <img src="./resources/images/img-berryblitz.jpg">
@@ -55,7 +55,7 @@
       </div>
 
 
-    <!-- LOCATIONS -->  <!-- ##  non è posizionato bene il locations, dovrebbe essere 15px sopra i box delle città -->
+    <!-- LOCATIONS -->
       <div class="locations" id="locations_id">
         <h2>Locations</h2>
         <div class="cities">
